Added ability to remove team you click on.  opens dialog to ask if you want to delete.  Added landscape view for HomeActivity.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="enter_button">Enter</string>
     <string name="team_code">Team Code</string>
     <string name="team_name">Team Name</string>
+    <string name="dialog_remove_team">Remove Team?</string>
+    <string name="remove">remove</string>
+    <string name="cancel_button">cancel</string>
 </resources>
