Removed Add Team button on HomeActivity and replaced it with an option menu.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">NHL Tracker</string>
     <string name="refresh_button">Refresh</string>
-    <string name="add_button">Add Team</string>
+    <string name="add_button">Add/Remove Team</string>
     <string name="remvoe_button">Remove Team</string>
     <string name="enter_button">Enter</string>
     <string name="team_code">Team Code</string>
