Crating Team Details when clicking on saved team.  Ran into problem where selected team does not hold the same position valu as the position of the team in the list.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="dialog_remove_team">Remove Team?</string>
     <string name="remove">remove</string>
     <string name="cancel_button">cancel</string>
+    <string name="team_details">This Months Games</string>
+    <string name="team_details_team_name">Team Name</string>
 </resources>
